flux/apps/development/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    managed-by: flux
    app: whoami
